[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/platforms/bouncy-platform.gd" type="Script" id=1]
[ext_resource path="res://Assets/platforms/bounce anim/bounce-sprite7.png" type="Texture" id=2]
[ext_resource path="res://Assets/platforms/bounce anim/bounce-sprite2.png" type="Texture" id=3]
[ext_resource path="res://Assets/platforms/bounce anim/bounce-sprite6.png" type="Texture" id=4]
[ext_resource path="res://Assets/platforms/bounce anim/bounce-sprite3.png" type="Texture" id=5]
[ext_resource path="res://Assets/platforms/bounce anim/bounce-sprite5.png" type="Texture" id=6]
[ext_resource path="res://Assets/platforms/bounce anim/bounce-sprite1.png" type="Texture" id=7]
[ext_resource path="res://Assets/platforms/bounce anim/bounce-sprite8.png" type="Texture" id=8]
[ext_resource path="res://Assets/platforms/bounce anim/bounce-sprite4.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 8 ) ],
"loop": true,
"name": "bounce",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 60, 17 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 60, 20 )

[node name="bouncy-platform" type="KinematicBody2D" groups=[
"Platforms",
]]
input_pickable = true
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "bounce"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
modulate = Color( 0.992157, 0.0313726, 0.0313726, 1 )
shape = SubResource( 3 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
